--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
+    "uuid": "^11.1.0",
     "zod": "^3.25.46"
   },
   "devDependencies": {
